# shakebot

./: .gitignore  Cargo.toml  LICENSE  README.md  output.txt  urls.json
src/: lib.rs  main.rs  parsing.rs  response.rs  serde_response.rs
src/bot/: dota.rs  mod.rs
src/bot/commands/: dota.rs  mod.rs
src/dota/: mod.rs  parsing.rs  patch_notes.rs  response.rs
src/smite/: mod.rs  parsing.rs  response.rs
src/tests/: mod.rs  patch_notes.rs  response_parsing.rs
