[package]
name = "shake_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
ctrlc = "3.4.4"
dotenv = "0.15.0"
futures = "0.3.30"
fuzzy-matcher = "0.3.7"
itertools = "0.12.1"
poise = "0.6.1"
rand = "0.8.5"
regex = "1.10.3"
reqwest = { version = "0.11.26", features = ["json"] }
reqwest-middleware = "0.2.5"
reqwest-retry = "0.4.0"
ron = "0.8.1"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
serenity = { version = "0.12.1", features = ["builder", "framework"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
winnow = "0.6.5"
